--- a/style.css
+++ b/style.css
@@ -165,3 +165,28 @@ a:visited{
 .poi{
     font-variation-settings: "wght" 700;
 }
+
+#zoom-buttons {
+    position: absolute;
+    bottom: 80px; /* Position 10px from the bottom */
+    right: 10px;  /* Position 10px from the right */
+    z-index: 1000; /* Ensure it's above the map */
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#zoom-buttons button {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    padding: 10px 35px;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+#zoom-buttons button:hover {
+    background-color: #f0f0f0;
+}
