--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ a:visited{
     pointer-events: all;
 }
 
+.panel hr {
+    border: 0px;
+    border-bottom: 2px solid #b3b3b396;
+}
+
 #topleft{
     position:fixed;
     top: 0px;
@@ -182,4 +187,39 @@ button{
         width: var(--legendButtonSize);
         height: var(--legendButtonSize);
     }
+}
+
+.signText {
+    font-family: Arial;
+}
+
+#changelog {
+    width: fit-content;
+    font-size: 11px;
+}
+
+#tooltip{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    pointer-events: none;
+    padding: 5px;
+    margin: 0;
+    font-size: 12px;
+}
+#tooltip h1{
+    font-variation-settings: "wght" 600;
+    font-style: italic;
+    font-size: 15px;
+    line-height: 1em;
+    padding-bottom: 4px;
+    padding: 0 4px 4px 4px;
+}
+#tooltip h2{
+    font-variation-settings: "wght" 600;
+    font-size: 10px;
+    line-height: 1em;
+    padding-bottom: 4px;
+    opacity: 0.7;
+    border-bottom: 2px solid #b3b3b396;
 }
