--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ a:visited{
     bottom: 5px;
     font-size: 0.8em;
     text-align: right;
+    text-shadow: black 2px 1px 4px;
 }
 
 #mapNavigator{
