--- a/style.css
+++ b/style.css
@@ -164,6 +164,12 @@ a:visited{
     background: linear-gradient(#444, #333);
 }
 
+#mapCanvas, #dynCanvas{
+    position: fixed;
+    width:100%;
+    height:100%;
+}
+
 .colorKey, .gradientKey{
     border:1px #858585 solid;
     border-radius: 4px;
